--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -1,3 +1,3 @@
-database.url=jdbc:postgresql://localhost:5432/${PG_DB:topjava}?currentSchema=${PG_SCHEMA:public}
-database.username=${PG_USER:user}
-database.password=${PG_PASS:password}
+database.url=jdbc:postgresql://localhost:5432/topjava
+database.username=user
+database.password=password
