--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -9,4 +9,20 @@ user.roles=Roles
 user.active=Active
 user.registered=Registered
 meal.title=Meals
+meal.filter=Filter
+meal.fromDate=From Date (inclusive):
+meal.toDate=To Date (inclusive):
+meal.fromTime=From Time (inclusive):
+meal.toTime=To Time (exclusive):
+meal.date=Date
+meal.description=Description
+meal.calories=Calories
+meal.add=Add Meal
+meal.update=Update
+meal.delete=Delete
+meal.create=Create Meal
+meal.edit=Edit Meal
+meal.dateTime=DateTime
+meal.save=Save
+meal.cancel=Cancel
 common.select=Select
