--- a/src/main/resources/db/bean-override.properties
+++ b/src/main/resources/db/bean-override.properties
@@ -1,1 +1,1 @@
-entityManagerFactory.jpaPropertyMap['(org.hibernate.cfg.AvailableSettings).USE_SECOND_LEVEL_CACHE']=true
+entityManagerFactory.jpaPropertyMap['hibernate.cache.use_second_level_cache']=true
