--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -20,6 +20,7 @@ user.active=Active
 user.registered=Registered
 user.password=Password
 user.caloriesPerDay=Daily calorie limit
+user.uniqueEmailError=User with this email already exists
 
 meal.title=Meals
 meal.edit=Edit meal
@@ -32,6 +33,7 @@ meal.endTime=To time (exclusive)
 meal.description=Description
 meal.dateTime=Date/Time
 meal.calories=Calories
+meal.uniqueDatetime=Meal with this datetime already exists
 
 common.add=Add
 common.select=Select
@@ -40,6 +42,7 @@ common.saved=Record saved
 common.enabled=Record enabled
 common.disabled=Record disabled
 common.errorStatus=Error status
+common.validationError=Data validation error
 common.appError=Application error
 common.confirm=Are you sure?
 common.save=Save
