--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -9,6 +9,7 @@ app.login=Login as
 app.profile=profile
 app.register=Registration
 app.registered=You are registered. Please Sign in.
+app.locale=en
 
 user.title=Users
 user.edit=Edit user
@@ -21,6 +22,7 @@ user.registered=Registered
 user.password=Password
 user.caloriesPerDay=Daily calorie limit
 user.uniqueEmailError=User with this email already exists
+user.passwordSizeError=Length must be between 5 and 32
 
 meal.title=Meals
 meal.edit=Edit meal
